html sayfası güncellendi

--- a/htmlodev1.html
+++ b/htmlodev1.html
@@ -9,15 +9,43 @@
 <p>Merhaba ben Mehmet Ceylan! İstanbul'da yaşıyorum. Bilimkurgu izlemeyi ve okumayı çok seviyorum. Tam bir İnterstellar hayranıyım! Web geliştirme ile ilgileniyorum. Kodluyoruz'un bu eğitim serisi </p>
 <p>sayesinde harika şeyler öğrendim ve öğrenmeye devam ediyorum</p>
 
-<!-- Sevdiğim dizi ve Paragraf Kısmı -->
+<!-- İlgi Alanlarım Ul ve Li yapısının bulunduğu kısım -->
 
 
- <h1> Sevdiğim Diziler</h1>
+ <h2>İlgi Alanlarım</h2>
 
-      <h2>Breaking Bad</h2>
+      <h3>1. Film</h3>
 
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus inventore, maxime non culpa possimus minima accusantium nisi excepturi saepe consequuntur nam labore nemo minus similique odio, et facilis in nulla.</p>
+        <ul>
+                <a href="https://www.imdb.com/title/tt1130884/"> <li>Shutter İsland</li> </a>
+                <li>John Wick</li>
+                    <li>Fight Club</li>
+        </ul>
 
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dolores consequatur consectetur numquam voluptates voluptatum culpa ea, ipsam, sint aspernatur velit sit eligendi blanditiis expedita ad, reprehenderit quae qui. Provident!</p>
+     <h3>2. Film</h3>
 
+        <ul>
+            <a href="https://www.imdb.com/title/tt0903747/"><li>Breaking Bad</li></a>
+            <li>Better Call Saul</li>
+            <li>Prison Break</li>
+        </ul>
+
+
+        <h3>3. Kitap</h3>
+
+        <ul>
+            <li>Totem ve Tabu</li>
+            <li>Satranç</li>
+          <a href="https://www.goodreads.com/bg/book/show/18297991-eker-portakal"> <li>Şeker Portakalı</li> </a>
+        </ul>
+
+        <h1>Sevdiğim Diziler</h1>
+
+        <img width="500px" src="https://ogden_images.s3.amazonaws.com/www.lockhaven.com/images/2021/01/06173002/BreakingBad1.jpg" alt="Breaking Bad"></img>
+
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus odio neque amet. Minus dolore unde earum sequi autem cupiditate numquam.</p>
+
+
+
+      
     
